# AgentStackBench

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pages.yml
agent-frameworks/claude-code/: run_bench.py
agent-frameworks/codex/: run_bench.py
configs/run_suites/: codex-superpowers-bootstrap-5-all-benches-smoke.json  codex-superpowers-bootstrap.json
contextbench/: artifact_sanitization.py  evaluate.py  process_trajectories.py  run.py  run_suites.py  run_suites_cleanup.py  run_suites_postprocess.py  run_suites_setup.py
contextbench/agents/: __init__.py  adapter_base.py  base.py  registry.py
contextbench/coding_agents/: __init__.py  constants.py  conversion.py  files.py  inference_limits.py  prompting.py  records.py  response_parsing.py  runtime.py  runtime_backends.py  runtime_common.py  task_data.py  trace_inference.py  types.py
contextbench/core/: repo.py
contextbench/extractors/: treesitter.py
contextbench/metrics/: __init__.py  compute.py  patch_editloc.py
data/: selected_smoke_all_benches.csv
docker/: claude-runtime.Dockerfile  codex-runtime.Dockerfile  coding-agent-runtime.Dockerfile
docs/: agents.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: export_comparison_data.py
site-data/: comparison.json
tests/: conftest.py  test_artifact_sanitization.py  test_coding_agent_task_data.py  test_evaluate.py  test_extractors_treesitter.py  test_patch_editloc.py  test_process_trajectories.py  test_repo_checkout.py
(+258 files in other folders)
